<resources>
    <string name="app_name">DaddyPoolMonitor</string>
    <string name="app_ver">DaddyPoolMonitor ver.1.1.3</string>
    <string name="no_text">"No text !"</string>
    <string name="no_data">"NoData"</string>
    <string name="saved">Saved</string>
    <string name="read_error">Read file error !</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="QR">QR読取</string>
    <string name="kousin">更新</string>
    <string name="Address">Address</string>
    <string name="Pool_Stats">●Bitzeny Pool Stats</string>
    <string name="Pool_StatsM">●Monacoin Pool Stats</string>
    <string name="Pool_StatsB">●Bellcoin Pool Stats</string>
    <string name="MyData">●MyData</string>
    <string name="xxx">xxx</string>
    <string name="Miners">Miners</string>
    <string name="Workers">Workers</string>
    <string name="xxxKH">xxxKH/s</string>
    <string name="hashrate">hashrate:</string>
    <string name="NoData">NoData</string>
    <string name="Diff">Diff:</string>
    <string name="balance">balance:</string>
    <string name="Paid">Paid:</string>
    <string name="add_widget">Add widget</string>
    <string name="menu_item0">aboutDPM</string>
    <string name="menu_item1">蛇口</string>
    <string name="menu_item2">ライセンス</string>
    <string name="menu_item3">利用規約</string>
    <string name="menu_item4">TestVer2.0</string>
    <string name="menu_item5">プライバシーポリシー</string>
    <string-array name="serverlist">
        <item>DaddyPool</item>
        <item>MacyanPool</item>
        <item>MOFUMOFUPool</item>
    </string-array>
    <string-array name="currencylist">
        <item>ZENY</item>
        <item>MONA</item>
        <item>BELL</item>
    </string-array>


    <!--<string name="menu_item5">アクティビティ5</string>-->
    <string name="terms">Daddy Pool Monitor 利用規約\n
\n
        免責事項著作権等\n
\n
2018/08/30\n
\n
【使用許諾条件】\n
\n
プール情報取得アプリ『DaddyPoolMonitor』(以下、本ソフトウエア)は、下記条項にご同意いただいた方にのみご使用いただけます。もしも、同意出来ない場合、本ソフトウェアを使用することは出来ません。使用を中止し、ただちに本ソフトウェアを破棄して下さい。\n

本ソフトウェアを使用された場合は下記条項にご同意のいただけたものとさせていただきます。\n

本ソフトウエアはフリーウエアです。対価の金銭等を支払っていただける方は大歓迎ですが、使用に際して金銭的条件を設定することはありません。\n

本ソフトウエアはプール情報の取得及び、簡易表示を目的とし、その他の目的に本ソフトウェアを使用しないものとします。\n

本ソフトウエアの使用に際しては日本国法に準拠するものとし、遵守できる方のみ使用を許諾するものとします。\n

製作者の判断、及び国家機関の命令等により、本ソフトウエアの使用停止が公示された場合、速やかに使用を取りやめるものとします。\n

作者の許諾無しに本ソフトウェアに対するリバースエンジニアリング及び、改変は一切禁止します。\n

なお、これらの条項につきましてはユーザ様の事前の了承を得ることなしに追加、変更することがあります。\n

新たな使用許諾条件公示後も使用を続けることによって最新の使用許諾条件を承諾したものとします。\n
\n
【保証の放棄】\n

本ソフトウェアは現状有志にて提供されるものです。\n

製作者の良心としてのサポート等を行うことはありますが、将来的、継続的なサポートを保証するものではありません。\n

また本ソフトウエアの上位バージョンが公示された場合、過去のバージョンについてのサポートは中断するものとします。\n

発生する技術的不具合、本ソフトウエアのバージョンアップについても原則的に保証しないものとします。\n
\n
【免責事項】\n

本ソフトウェアの利用は、利用者自身の責任と費用によっておこなってください。\n

本ソフトウエアを利用する、もしくは利用できないことにより発生した損害、ならびに二次的に発生した一切の損害について製作者側にて保証を行う事はできません。\n
\n
【著作権】\n

本ソフトウエアに関する著作権その他の全ての権利は該当の作者に帰属します。\n

本ソフトウェア及び内容物は、著作権法及び国際著作権条約をはじめ、財産権、所有権、知的財産権、その他の無体財産権に関する法律ならびに条約によって保護されています。\n</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="tab_text_1">Main</string>
    <string name="tab_text_2">なにか</string>
    <string name="tab_text_3">設定</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Address_select">Address: %1$d</string>
</resources>
