<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:spinnerMode="dialog"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnQRRead2"
                    style="@android:style/Widget.DeviceDefault.Button.Inset"
                    android:layout_width="72dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/QR"
                    app:layout_constraintEnd_toStartOf="@+id/button2"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button2"
                    style="@android:style/Widget.DeviceDefault.Button.Inset"
                    android:layout_width="72dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/kousin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <AutoCompleteTextView
                    android:id="@+id/editText2"
                    android:layout_width="359dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:popupBackground="#d7d4d4"
                    android:text="@string/Address"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnQRRead2"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/textPoolStats2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/Pool_Stats"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText2" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="160dp"
                    android:layout_height="1dp"
                    android:background="@android:color/holo_red_dark"
                    app:layout_constraintTop_toBottomOf="@+id/textPoolStats2" />

                <TableLayout
                    android:id="@+id/tableLayout3"
                    android:layout_width="152dp"
                    android:layout_height="58dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textPoolStats2">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textMinerData2"
                            android:layout_width="68dp"
                            android:layout_height="wrap_content"
                            android:text="@string/xxx"
                            android:textColor="#ff0000"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="321dp"
                            tools:layout_editor_absoluteY="163dp" />

                        <TextView
                            android:id="@+id/textMiner2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Miners"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="342dp"
                            tools:layout_editor_absoluteY="163dp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textWorkersData2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/xxx"
                            android:textColor="#ff0000"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="173dp"
                            tools:layout_editor_absoluteY="181dp" />

                        <TextView
                            android:id="@+id/textWorkers2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Workers"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="194dp"
                            tools:layout_editor_absoluteY="181dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textHash2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_span="2"
                            android:text="@string/xxxKH"
                            android:textColor="#ff0000"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="332dp"
                            tools:layout_editor_absoluteY="199dp" />
                    </TableRow>

                </TableLayout>

                <TextView
                    android:id="@+id/textMyData2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/MyData"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout3" />

                <View
                    android:id="@+id/view5"
                    android:layout_width="160dp"
                    android:layout_height="1dp"
                    android:background="@android:color/holo_blue_bright"
                    app:layout_constraintTop_toBottomOf="@+id/textMyData2" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="13dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="56dp"
                    android:text=""
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/tableLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.538"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textMyData2">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textHashTitle2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:text="@string/hashrate"
                            android:textColor="@android:color/holo_blue_bright"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="198dp"
                            tools:layout_editor_absoluteY="181dp"
                            tools:textColor="@android:color/holo_blue_bright" />

                        <TextView
                            android:id="@+id/textHashData2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/NoData"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="263dp"
                            tools:layout_editor_absoluteY="181dp" />

                        <TextView
                            android:id="@+id/textDiffTitle2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/Diff"
                            android:textColor="@android:color/holo_blue_bright"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="121dp"
                            tools:layout_editor_absoluteY="199dp"
                            tools:textColor="@android:color/holo_blue_bright" />

                        <TextView
                            android:id="@+id/textDiffData2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/NoData"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="186dp"
                            tools:layout_editor_absoluteY="199dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textBalTitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:text="@string/balance"
                            android:textColor="@android:color/holo_blue_bright"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="140dp"
                            tools:layout_editor_absoluteY="215dp"
                            tools:textColor="@android:color/holo_blue_bright" />

                        <TextView
                            android:id="@+id/textBalData2"
                            android:layout_width="101dp"
                            android:layout_height="wrap_content"
                            android:text="@string/NoData"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="53dp"
                            tools:layout_editor_absoluteY="215dp" />

                        <TextView
                            android:id="@+id/textPaidTitle2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:text="@string/Paid"
                            android:textColor="@android:color/holo_blue_bright"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="160dp"
                            tools:layout_editor_absoluteY="234dp"
                            tools:textColor="@android:color/holo_blue_bright" />

                        <TextView
                            android:id="@+id/textPaidData2"
                            android:layout_width="103dp"
                            android:layout_height="wrap_content"
                            android:text="@string/NoData"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="223dp"
                            tools:layout_editor_absoluteY="234dp" />
                    </TableRow>

                    <!--<TableRow-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent">-->

                    <!--<TextView-->
                    <!--android:id="@+id/textLuckDayTitle"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="LuckDay"-->
                    <!--android:textColor="@android:color/holo_blue_bright"-->
                    <!--tools:layout_editor_absoluteX="140dp"-->
                    <!--tools:layout_editor_absoluteY="250dp" />-->

                    <!--<TextView-->
                    <!--android:id="@+id/textLuckDayData"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="NoData"-->
                    <!--tools:layout_editor_absoluteX="225dp"-->
                    <!--tools:layout_editor_absoluteY="253dp" />-->
                    <!--</TableRow>-->

                    <!--<TableRow-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent">-->

                    <!--<TextView-->
                    <!--android:id="@+id/textLuckHoursTitle"-->
                    <!--android:layout_width="82dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="LuckHours"-->
                    <!--android:textColor="@android:color/holo_blue_bright"-->
                    <!--tools:layout_editor_absoluteX="124dp"-->
                    <!--tools:layout_editor_absoluteY="269dp" />-->

                    <!--<TextView-->
                    <!--android:id="@+id/textLuckHoursData"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="NoData"-->
                    <!--tools:layout_editor_absoluteX="223dp"-->
                    <!--tools:layout_editor_absoluteY="272dp" />-->
                    <!--</TableRow>-->

                    <!--<TableRow-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent">-->

                    <!--<TextView-->
                    <!--android:id="@+id/textSharesTitle"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="Shares"-->
                    <!--android:textColor="@android:color/holo_blue_bright"-->
                    <!--tools:layout_editor_absoluteX="148dp"-->
                    <!--tools:layout_editor_absoluteY="287dp" />-->

                    <!--<TextView-->
                    <!--android:id="@+id/textSharesData"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="NoData"-->
                    <!--tools:layout_editor_absoluteX="223dp"-->
                    <!--tools:layout_editor_absoluteY="290dp" />-->
                    <!--</TableRow>-->
                </TableLayout>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart2"
                    android:layout_width="match_parent"
                    android:layout_height="81dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout5">

                </com.github.mikephil.charting.charts.LineChart>
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="168dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <!--<com.google.android.gms.ads.AdView-->
        <!--android:id="@+id/adView2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="76dp"-->
        <!--app:adSize="BANNER"-->
        <!--app:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
        <!--app:layout_constraintBottom_toBottomOf="parent">-->

    <!--</com.google.android.gms.ads.AdView>-->

</android.support.constraint.ConstraintLayout>